--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "An Interledger music streaming example",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "interledger",
     "bigchaindb",
@@ -14,8 +11,72 @@
   ],
   "author": "= <=> (http://hondrt.de/)",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint ./",
+    "build": "rimraf ./build && cross-env NODE_ENV=extract webpack",
+    "build:dist": "rimraf ./dist && cross-env NODE_ENV=production webpack -p",
+    "clean": "rimraf ./build ./dist",
+    "start": "cross-env NODE_ENV=demo node server.demo.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm run build"
+  },
   "dependencies": {
+    "alt": "^0.18.4",
+    "bootstrap-sass": "^3.3.6",
     "binaryjs": "^0.2.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "ilp-core": "^3.0.0",
+    "ilp-plugin-bells": "^2.1.0",
+    "ilp-plugin-bigchaindb": "0.0.3",
+    "classnames": "^2.2.5",
+    "co": "^4.6.0",
+    "core-js": "^2.4.0",
+    "eventemitter2": "^1.0.3",
+    "isomorphic-fetch": "^2.2.0",
+    "js-utility-belt": "^1.3.1",
+    "moment": "^2.10.6",
+    "q": "^1.4.1",
+    "react": "^0.14.8",
+    "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.8",
+    "react-matrix": "0.0.6",
+    "react-scroll": "^1.0.15",
+    "reconnect-core": "^1.2.0",
+    "shallow-equals": "0.0.0",
+    "simple-websocket": "^4.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-cli": "^6.8.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.0.1",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-react-display-name": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babel-runtime": "^6.9.2",
+    "cross-env": "^1.0.8",
+    "css-loader": "^0.23.0",
+    "dotenv": "^2.0.0",
+    "eslint": "^2.10.2",
+    "eslint-config-ascribe-react": "^1.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.16.1",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.9.1",
+    "react-transform-hmr": "^1.0.4",
+    "rimraf": "^2.5.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.1.0-beta.7",
+    "webpack-combine-loaders": "^2.0.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
