--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "clean": "rimraf ./build ./dist",
     "start": "cross-env NODE_ENV=demo node server.demo.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "babel-version": "babel --version"
   },
   "dependencies": {
     "alt": "^0.18.4",
@@ -29,12 +30,15 @@
     "core-js": "^2.4.0",
     "eventemitter2": "^1.0.3",
     "express": "^4.14.0",
+    "five-bells-ledger": "^15.0.0",
+    "ilp": "^1.0.0",
     "ilp-core": "^3.0.0",
     "ilp-plugin-bells": "^2.1.0",
     "ilp-plugin-bigchaindb": "0.0.3",
     "isomorphic-fetch": "^2.2.0",
     "js-utility-belt": "^1.3.1",
     "moment": "^2.10.6",
+    "multiplexer": "^1.4.1",
     "q": "^1.4.1",
     "react": "^0.14.8",
     "react-bootstrap": "^0.28.1",
@@ -47,14 +51,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "babel-cli": "^6.8.0",
+    "babel-cli": "^6.10.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.0.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-react-display-name": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.1.2",
     "babel-runtime": "^6.9.2",
     "cross-env": "^1.0.8",
