--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "rimraf ./build && cross-env NODE_ENV=extract webpack",
     "build:dist": "rimraf ./dist && cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf ./build ./dist",
-    "start": "cross-env NODE_ENV=demo node server.demo.js",
+    "start": "rm -f data/*.sqlite ; ./node_modules/.bin/babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run build",
     "babel-version": "babel --version"
@@ -27,19 +27,23 @@
     "bootstrap-sass": "^3.3.6",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
+    "co-request": "^1.0.0",
     "core-js": "^2.4.0",
     "eventemitter2": "^1.0.3",
     "express": "^4.14.0",
-    "five-bells-ledger": "^15.0.0",
+    "five-bells-connector": "~7.0.1",
+    "five-bells-ledger": "~14.0.3",
     "ilp": "^1.0.0",
     "ilp-core": "^3.0.0",
     "ilp-plugin-bells": "^2.1.0",
     "ilp-plugin-bigchaindb": "0.0.3",
     "isomorphic-fetch": "^2.2.0",
     "js-utility-belt": "^1.3.1",
+    "lodash": "^4.11.1",
     "moment": "^2.10.6",
     "multiplexer": "^1.4.1",
     "q": "^1.4.1",
+    "randomgraph": "^0.1.3",
     "react": "^0.14.8",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.8",
@@ -47,7 +51,8 @@
     "react-scroll": "^1.0.15",
     "reconnect-core": "^1.2.0",
     "shallow-equals": "0.0.0",
-    "simple-websocket": "^4.1.0"
+    "simple-websocket": "^4.1.0",
+    "sqlite3": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
