--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "core-js": "^2.4.0",
     "eventemitter2": "^1.0.3",
     "express": "^4.14.0",
-    "five-bells-connector": "~7.0.1",
+    "five-bells-connector": "^8.0.3",
     "five-bells-ledger": "~14.0.3",
     "ilp": "^1.0.0",
     "ilp-core": "^3.0.0",
